Now paints keys different colors.

--- a/app/src/main/res/xml/hoplitekeyboard.xml
+++ b/app/src/main/res/xml/hoplitekeyboard.xml
@@ -52,10 +52,10 @@
         <Key android:codes="38" android:keyLabel="Del" android:keyWidth="17.0%p" android:keyEdgeFlags="right" android:isRepeatable="true"/>
     </Row>
     <Row>
-        <Key android:codes="12"    android:keyLabel="caps" android:keyEdgeFlags="left" android:horizontalGap="2%p" />
-        <Key android:codes="39" android:keyLabel="Space" android:keyWidth="30.0%p"  />
+        <Key android:codes="42"    android:keyLabel="caps" android:keyEdgeFlags="left" android:keyWidth="14.0%p" />
+        <Key android:codes="39" android:keyLabel="space" android:keyWidth="30.0%p"  />
         <Key android:codes="36"    android:keyLabel="."   />
         <Key android:codes="37"    android:keyLabel=";"   />
-        <Key android:codes="35" android:keyLabel="Enter" android:keyWidth="30.0%p" android:keyEdgeFlags="right" />
+        <Key android:codes="35" android:keyLabel="enter" android:keyWidth="30.0%p" android:keyEdgeFlags="right" />
     </Row>
 </Keyboard>
