--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#999999"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/myView2">
 
 
     <EditText
@@ -52,7 +53,17 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         />
-
+    <com.philolog.hoplitekeyboard.HopliteKeyboardView
+        android:id="@+id/keyboardview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:visibility="gone"
+        android:padding="1dp"
+        />
 
 
 </RelativeLayout>
