Now it unicode mode works for embedded keyboard and mode description is displayed on testing screen.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="ButtonLightBlue">#FF8CDCFF</color>
     <color name="accentorange">#ffff6046</color>
     <color name="puncblue">#ff325A8B</color>
+    <color name="MenuButtonBlue">#ff6ca1fc</color>
 </resources>
