--- a/app/src/main/res/layout/hk_testing_activity.xml
+++ b/app/src/main/res/layout/hk_testing_activity.xml
@@ -3,15 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#999999"
+    android:background="#ff000000"
     android:orientation="vertical"
     android:id="@+id/myView2">
 
+    <TextView
+        android:id="@+id/titleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:gravity="center_vertical|start"
+        android:paddingLeft="6dp"
+        android:paddingStart="6dp"
+        android:text="@string/app_name"
+        android:textColor="#ffffffff"
+        android:textSize="18sp"
+        
+        android:layout_marginBottom="8dp"/>
 
     <EditText
         android:id="@+id/mTextView"
+        android:layout_below="@+id/titleView"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="140dp"
         android:background="#ffffffff"
         android:ems="20"
         android:gravity="start"
@@ -27,22 +42,38 @@
         android:textAlignment="viewStart"
         android:textSize="44sp" />
 
-    <EditText
+    <TextView
+        android:id="@+id/modeView"
         android:layout_below="@+id/mTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:gravity="center_vertical|start"
+        android:paddingLeft="6dp"
+        android:paddingStart="6dp"
+        android:text="Unicode mode: "
+        android:textColor="#ffffffff"
+        android:textSize="18sp"
+
+        android:layout_marginBottom="8dp"/>
+
+    <EditText
+        android:layout_below="@+id/modeView"
         android:id="@+id/mCodePointTextView"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="#ffffffff"
+        android:layout_height="140dp"
+        android:background="#ff000000"
+        android:textColor="#ffffffff"
         android:ems="20"
         android:gravity="start"
         android:inputType="textMultiLine"
-        android:padding="20dp"
-        android:paddingBottom="20dp"
-        android:paddingEnd="20dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingStart="20dp"
-        android:paddingTop="20dp"
+        android:paddingBottom="0dp"
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="6dp"
         android:text=""
         android:textAlignment="viewStart"
         android:textSize="20sp"
@@ -63,7 +94,7 @@
         android:focusableInTouchMode="true"
         android:visibility="gone"
         android:padding="1dp"
+        android:translationZ="999dp"
         />
-
 
 </RelativeLayout>
