--- a/app/src/main/res/layout/installation.xml
+++ b/app/src/main/res/layout/installation.xml
@@ -3,19 +3,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff000000">
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titleView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:gravity="center_vertical|start"
+        android:paddingLeft="6dp"
+        android:paddingStart="6dp"
+        android:text="@string/app_name"
+        android:textColor="#ffffffff"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"/>
+    <TextView
+        android:id="@+id/installationTextView"
         android:textColor="#ffffffff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="INSTALLATION
-
-To install keyboard on iOS device:
-1) Open the Settings app
-2) Select General -> Keyboard -> Keyboards
-3) Add New Keyboard...
-4) Select 'Hoplite Greek Keyboard'
-
-For best results, install a polytonic Greek font such as New Athena Unicode." />
+        android:text="" />
 </LinearLayout>
