--- a/app/src/main/res/xml/hoplitekeyboard.xml
+++ b/app/src/main/res/xml/hoplitekeyboard.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
     android:keyWidth="11.0%p"
-    android:keyHeight="7%p"
+    android:keyHeight="6.5%p"
     android:horizontalGap="3dp"
     android:verticalGap="3dp">
 
-    <Row>
+    <Row android:rowEdgeFlags="top">
         <Key android:codes="27"    android:keyLabel="("  android:keyEdgeFlags="left" />
         <Key android:codes="28"    android:keyLabel=")"   />
         <Key android:codes="29"    android:keyLabel="/"   />
@@ -49,13 +49,13 @@
         <Key android:codes="13"    android:keyLabel="ν"  />
         <Key android:codes="12"    android:keyLabel="μ"  />
 
-        <Key android:codes="38" android:keyLabel="Del" android:keyWidth="17.0%p" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <Key android:codes="38" android:keyLabel="Del" android:keyWidth="22.0%p" android:keyEdgeFlags="right" android:isRepeatable="true"/>
     </Row>
-    <Row>
+    <Row android:rowEdgeFlags="bottom">
         <Key android:codes="42"    android:keyLabel="caps" android:keyEdgeFlags="left" android:keyWidth="14.0%p" />
-        <Key android:codes="39" android:keyLabel="space" android:keyWidth="30.0%p"  />
-        <Key android:codes="36"    android:keyLabel="."   />
-        <Key android:codes="37"    android:keyLabel=";"   />
-        <Key android:codes="35" android:keyLabel="enter" android:keyWidth="30.0%p" android:keyEdgeFlags="right" />
+        <Key android:codes="39" android:keyLabel="space" android:keyWidth="32.0%p"  />
+        <Key android:codes="36"    android:keyLabel="." />
+        <Key android:codes="37"    android:keyLabel=";" />
+        <Key android:codes="35" android:keyLabel="enter" android:keyWidth="32.0%p" android:keyEdgeFlags="right" />
     </Row>
 </Keyboard>
