--- a/app/src/main/res/xml/hoplitekeyboard.xml
+++ b/app/src/main/res/xml/hoplitekeyboard.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="11.0%p"
-    android:keyHeight="6.5%p"
+    android:keyWidth="10.19%p"
+    android:keyHeight="6.9%p"
     android:horizontalGap="3dp"
     android:verticalGap="3dp">
 
@@ -49,13 +49,17 @@
         <Key android:codes="13"    android:keyLabel="ν"  />
         <Key android:codes="12"    android:keyLabel="μ"  />
 
-        <Key android:codes="38" android:keyLabel="Del" android:keyWidth="22.6%p" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <Key android:codes="38" android:keyIcon="@drawable/delete" android:iconPreview="@drawable/delete" android:keyWidth="21.0%p" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+
+
     </Row>
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="42"    android:keyLabel="caps" android:keyEdgeFlags="left" android:keyWidth="14.0%p" />
+        <Key android:codes="42"     android:keyIcon="@drawable/ic_keyboard_capslock_white_3x" android:iconPreview="@drawable/ic_keyboard_capslock_white_3x" android:keyEdgeFlags="left"  />
+        <Key android:codes="49"  android:keyLabel=" "  />
+
         <Key android:codes="39" android:keyLabel="space"  android:keyWidth="32.0%p"  />
         <Key android:codes="36"    android:keyLabel="." />
         <Key android:codes="37"    android:keyLabel=";" />
-        <Key android:codes="35" android:keyLabel="enter" android:keyWidth="32.0%p" android:keyEdgeFlags="right" />
+        <Key android:codes="35" android:keyLabel="enter" android:keyWidth="21.0%p" android:keyEdgeFlags="right" />
     </Row>
 </Keyboard>
