--- a/app/src/main/res/drawable/accentbutton.xml
+++ b/app/src/main/res/drawable/accentbutton.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@color/accentorange" />
+    <solid android:color="?attr/diacriticBgColor" />
     <corners android:radius="5dp" />
 </shape>
