--- a/app/src/main/res/drawable/enterbuttondown.xml
+++ b/app/src/main/res/drawable/enterbuttondown.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="#FFFFFF" />
+    <solid android:color="?attr/enterBgColorDown" />
     <corners android:radius="5dp" />
-    <stroke android:color="@color/ButtonBlue" android:width="4dp"/>
+    <stroke android:color="?attr/enterBgColor" android:width="4dp"/>
 </shape>
