--- a/app/src/main/res/drawable/puncbutton.xml
+++ b/app/src/main/res/drawable/puncbutton.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@color/puncblue" />
+    <solid android:color="?attr/punctuationBgColor" />
     <corners android:radius="5dp" />
 </shape>
