--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,8 +14,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
-
-    <style name="HKDayNight" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
+    <style name="HKLight" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
@@ -45,6 +44,39 @@
 
         <item name="spaceTextColor">@color/KBGrey</item>
         <item name="keyboardBgColor">#FFC8C8C8</item>
+    </style>
+    <style name="HKDark" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+
+        <item name="keyBgColor">#FF333333</item>
+        <item name="keyTextColor">#FFFFFFFF</item>
+        <item name="diacriticBgColor">#FF545454</item>
+        <item name="diacriticTextColor">#FFFFFFFF</item>
+        <item name="punctuationBgColor">#FF777778</item>
+        <item name="punctuationTextColor">#FFFFFFFF</item>
+        <item name="specialBgColor">#ff676767</item>
+        <item name="specialTextColor">#FF000000</item>
+        <item name="enterBgColor">#FF545454</item>
+        <item name="enterTextColor">#FFFFFFFF</item>
+
+        <item name="keyBgColorDown">#FF000000</item>
+        <item name="keyTextColorDown">#FFFFFFFF</item>
+        <item name="diacriticBgColorDown">#FF000000</item>
+        <item name="diacriticTextColorDown">#FFFFFFFF</item>
+        <item name="punctuationBgColorDown">#FF000000</item>
+        <item name="punctuationTextColorDown">#FFFFFFFF</item>
+        <item name="specialBgColorDown">#ff787786</item>
+        <item name="specialTextColorDown">#FFFFFFFF</item>
+        <item name="enterBgColorDown">#FFFFFFFF</item>
+        <item name="enterTextColorDown">@color/ButtonBlue</item>
+
+        <item name="spaceTextColor">@color/KBGrey</item>
+        <item name="keyboardBgColor">#FF000000</item>
+    </style>
+    <style name="HKDayNight" parent="HKLight">
     </style>
 
 </resources>
