add click and vibrate preferences. still need to add listener to update on change

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -10,7 +10,14 @@
             android:entries="@array/unicodemodeentries"
             android:entryValues="@array/unicodemodevalues"
             android:defaultValue="0"/>
-
+        <CheckBoxPreference
+            android:key="VibrateOn"
+            android:title="Vibrate"
+            android:defaultValue="false" />
+        <CheckBoxPreference
+            android:key="SoundOn"
+            android:title="Sound"
+            android:defaultValue="false" />
 </PreferenceCategory>
 
 </PreferenceScreen>
