--- a/app/src/main/res/values-night/arrays.xml
+++ b/app/src/main/res/values-night/arrays.xml
@@ -11,7 +11,7 @@
     <item>2</item>
 </string-array>
 <string-array name="themeentries">
-    <item>Follow System</item>
+    <item>Follow System Dark Mode</item>
     <item>Dark</item>
     <item>Light</item>
 </string-array>
