reorder settings, try to make cursor visible in edittext

--- a/app/src/main/res/layout/hk_testing_activity.xml
+++ b/app/src/main/res/layout/hk_testing_activity.xml
@@ -42,7 +42,7 @@
         android:textAlignment="viewStart"
         android:textSize="44sp"
         android:textIsSelectable="true"
-        />
+        android:textCursorDrawable="@drawable/cursor" />
 
     <TextView
         android:id="@+id/modeView"
