--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 <PreferenceCategory
-    android:title="Settings"
+    android:title="Hoplite Keyboard Settings"
     android:key="pref_key_storage_settings">
 
         <ListPreference
@@ -10,6 +10,12 @@
             android:entries="@array/unicodemodeentries"
             android:entryValues="@array/unicodemodevalues"
             android:defaultValue="0"/>
+        <ListPreference
+            android:key="HKTheme"
+            android:title="Dark Mode"
+            android:entries="@array/themeentries"
+            android:entryValues="@array/themevalues"
+            android:defaultValue="HKDayNight"/>
         <SwitchPreferenceCompat
             android:key="HKSoundOn"
             android:title="Sound"
@@ -22,12 +28,7 @@
             android:key="HKSpacingDiacritics"
             android:title="Enable Spacing Diacritics"
             android:defaultValue="false" />-->
-        <ListPreference
-            android:key="HKTheme"
-            android:title="Theme"
-            android:entries="@array/themeentries"
-            android:entryValues="@array/themevalues"
-            android:defaultValue="HKDayNight"/>
+
 
 </PreferenceCategory>
 
