--- a/app/src/main/res/layout/hk_testing_activity.xml
+++ b/app/src/main/res/layout/hk_testing_activity.xml
@@ -21,7 +21,7 @@
         android:textSize="18sp"
         android:layout_marginBottom="8dp"/>
 
-    <EditText
+    <com.philolog.hoplitekeyboard.HCGreekEditText
         android:id="@+id/mTextView"
         android:layout_below="@+id/titleView"
         android:layout_width="match_parent"
@@ -42,6 +42,7 @@
         android:textAlignment="viewStart"
         android:textSize="44sp"
         android:textIsSelectable="true"
+        android:cursorVisible="true"
         android:textCursorDrawable="@drawable/cursor" />
 
     <TextView
