--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,7 +21,7 @@
         android:textSize="18sp"
         android:layout_marginBottom="8dp"/>
 
-    <EditText
+    <com.philolog.hoplitekeyboard.HCGreekEditText
         android:layout_below="@+id/titleView"
         android:id="@+id/mTextView"
         android:layout_width="match_parent"
