--- a/app/src/main/res/layout/hk_testing_activity.xml
+++ b/app/src/main/res/layout/hk_testing_activity.xml
@@ -21,7 +21,7 @@
         android:textSize="18sp"
         android:layout_marginBottom="8dp"/>
 
-    <com.philolog.hoplitekeyboard.HCGreekEditText
+    <com.philolog.hoplitekb.HCGreekEditText
         android:id="@+id/mTextView"
         android:layout_below="@+id/titleView"
         android:layout_width="match_parent"
@@ -87,7 +87,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         />
-    <com.philolog.hoplitekeyboard.HopliteKeyboardView
+    <com.philolog.hoplitekb.HopliteKeyboardView
         android:id="@+id/keyboardview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
