--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,7 +21,7 @@
         android:textSize="18sp"
         android:layout_marginBottom="8dp"/>
 
-    <com.philolog.hoplitekeyboard.HCGreekEditText
+    <com.philolog.hoplitekb.HCGreekEditText
         android:layout_below="@+id/titleView"
         android:id="@+id/mTextView"
         android:layout_width="match_parent"
@@ -106,7 +106,7 @@
         android:paddingLeft="6dp"
         android:gravity="center_vertical|start"/>
 
-    <com.philolog.hoplitekeyboard.HopliteKeyboardView
+    <com.philolog.hoplitekb.HopliteKeyboardView
         android:id="@+id/keyboardview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
