--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="#ff000000"
     android:orientation="vertical"
-    android:id="@+id/HKMenu">
+    android:id="@+id/HKMenu"
+    android:fitsSystemWindows="true">
 
     <TextView
         android:id="@+id/titleView"
